--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,8 @@
             ],
             "styles": [
               "src/styles.sass",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
-
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@ng-select/ng-select/themes/default.theme.css"
             ],
             "scripts": []
           },
