--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
+    "@ng-select/ng-select": "^2.5.0",
     "angular-calendar": "^0.25.2",
     "angularx-flatpickr": "^6.0.0",
     "bootstrap": "^4.1.3",
