--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.5.4",
     "date-fns": "^1.29.0",
     "flatpickr": "^4.5.1",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "rxjs": "^6.0.0",
